# mx-exchange-sc

./: .gitignore  Cargo.toml  README.md  build-wasm.sh  clean-wasm.sh  demo.md  erdpy-up.py  magic.sh  run-wat-build.sh  sizes.sh  wasm-opt  wasm-opt.sh  wat-build.sh
common/common_structs/: Cargo.toml
common/dex-common/: Cargo.toml
dex/: Cargo.toml
dex/dex-common/: Cargo.toml
dex/elrond_dex_farm/: Cargo.toml  README.md
dex/elrond_dex_pair/: Cargo.toml  README.md
dex/elrond_dex_router/: Cargo.toml  README.md
dex/erdjs-snippets/: .gitignore  devnet.session.json  package.json
dex/farm/: Cargo.toml  README.md
dex/farm-concentrated-liq/: Cargo.toml
dex/farm-staking/: Cargo.toml
dex/farm-staking-proxy/: Cargo.toml
dex/farm-with-community-rewards/: Cargo.toml  README.md
dex/farm-with-locked-rewards/: Cargo.toml  README.md  sc-config.toml
dex/farm-with-top-up/: Cargo.toml
dex/farm_mock_v1_4/: Cargo.toml
dex/farm_v1_2_mock/: Cargo.toml
dex/farm_with_community_rewards/: Cargo.toml  README.md
dex/farm_with_lock/: Cargo.toml  README.md
dex/fuzz/: Cargo.toml  README.md
dex/governance/: Cargo.toml  README.md
dex/interaction/: maiar.exchange.snippets.sh  testnet.snippets.sh
dex/interactor/: Cargo.toml  state.toml
dex/liquidity-book/: Cargo.toml
dex/lkmex-transfer/: README.md
dex/mandos/: _generated_enter_farm.scen.json  _generated_init.scen.json  accept_esdt_payment.scen.json  accept_esdt_payment_wrong_token.scen.json  add_liquidity.scen.json  calculate_rewards_for_given_position.scen.json  calculate_rewards_for_given_position_after_compound.scen.json  check_fee_disabled_after_swap.scen.json  check_fee_enabled_after_swap.scen.json  claim_rewards.scen.json  claim_rewards_and_deposit_tokens.scen.json  complete_setup.scen.json  compound_rewards.scen.json  create_pair_twice.scen.json  enter_farm.scen.json  enter_farm_with_merge_tokens.scen.json  enter_mex_farm.scen.json  exit_farm.scen.json  exit_farm_too_soon.scen.json  exit_mex_farm.scen.json  farm_reward_distr_scen_1.scen.json  farm_reward_distr_scen_2.scen.json  farm_reward_distr_scen_3.scen.json  farm_reward_distr_scen_4.scen.json  farm_reward_distr_scen_5.scen.json  farm_with_egld_token.scen.json  farm_wrong_lp_token.scen.json  frontrunning_prevent.scen.json  get_amounts.scen.json  get_amounts_no_liquidity.scen.json  get_pair_non_existent.scen.json  get_pair_views.scen.json  merge_tokens.scen.json  migrate_to_v1_4.scen.json  multi_pair_swap.scen.json  owner_pause_farm.scen.json  owner_resume_farm.scen.json  prices_check.scen.json  reclaim_temporary_funds.scen.json  remove_liquidity.scen.json  (+11 more)
dex/mandos-deprecated/: accept_esdt_payment.scen.json  add_liquidity.scen.json  calculate_rewards_for_given_position.scen.json  check_fee_disabled_after_swap.scen.json  check_fee_enabled_after_swap.scen.json  claim_rewards.scen.json  complete_setup.scen.json  complex_add_bad_trusted_swap_pair.scen.json  complex_add_oracle_pair.scen.json  complex_extern_swap_after_local_swap.scen.json  complex_extern_swap_after_local_swap_remove_whitelist.scen.json  complex_remove_trusted_swap_pair.scen.json  complex_remove_whitelist.scen.json  complex_setup_from_zero.scen.json  create_pair_twice.scen.json  enter_farm.scen.json  enter_mex_farm.scen.json  exit_farm.scen.json  exit_farm_too_soon.scen.json  exit_mex_farm.scen.json  farm_with_egld_token.scen.json  farm_wrong_lp_token.scen.json  get_all_accepted_tokens.scen.json  get_amounts.scen.json  get_amounts_no_liquidity.scen.json  get_pair_non_existent.scen.json  get_pair_views.scen.json  owner_pause_farm.scen.json  remove_liquidity_twice.scen.json  router_pause_self.scen.json  router_resume_self.scen.json  send_with_no_funds.scen.json  swap_fixed_input.scen.json  swap_fixed_input_after_removed_liquidity.scen.json  swap_wrong_token.scen.json
dex/multi_token_farm/: Cargo.toml
dex/pair/: Cargo.toml  README.md  multicontract.toml  sc-config.toml
dex/pair-mock/: Cargo.toml
dex/permissions-hub/: Cargo.toml  README.md
dex/price-discovery/: Cargo.toml  README.md
dex/proxy-deployer/: Cargo.toml
dex/router/: Cargo.toml  README.md  sc-config.toml
dex/scenarios/: add_liquidity.scen.json  calculate_rewards_for_given_position.scen.json  calculate_rewards_for_given_position_after_compound.scen.json  check_fee_disabled_after_swap.scen.json  check_fee_enabled_after_swap.scen.json  complete_setup.scen.json  compound_rewards.scen.json  enter_farm.scen.json  enter_farm_with_merge_tokens.scen.json  enter_mex_farm.scen.json  exit_farm.scen.json  exit_farm_too_soon.scen.json  exit_mex_farm.scen.json  farm_reward_distr_scen_1.scen.json  farm_reward_distr_scen_2.scen.json  farm_reward_distr_scen_3.scen.json  farm_reward_distr_scen_4.scen.json  farm_with_egld_token.scen.json  get_amounts.scen.json  get_amounts_no_liquidity.scen.json  get_pair_views.scen.json  merge_tokens.scen.json  owner_resume_farm.scen.json  remove_liquidity_twice.scen.json  remove_pair.scen.json  router_pause_self.scen.json  swap_fixed_output.scen.json  swap_same_token.scen.json  upgrade_contract.scen.json
dex/tests/: dex_mandos_go_test.rs  dex_mandos_rs_test.rs  dex_scenario_go_test.rs  dex_scenario_rs_test.rs  farm_multisharded_tests.rs  farm_review_distribution.rs  farm_rs_test.rs  farm_staking_test.rs  farm_with_community_rewards_test.rs  farm_with_lock_review_distribution.rs  farm_with_pair_test.rs  pair_rs_test.rs  router_test.rs  staking_farm_with_lp.rs  staking_farm_with_lp_external_contracts.rs  staking_farm_with_lp_staking_contract_interactions.rs
dex/whitelists-hub/: Cargo.toml
elrond_dex_farm/: Cargo.toml
elrond_dex_farm/abi/: Cargo.toml
elrond_dex_farm/src/: config.rs  lib.rs  liquidity_pool.rs  rewards.rs
elrond_dex_pair/: Cargo.toml  deploy-testnet.interaction.json
elrond_dex_route/: Cargo.toml
elrond_dex_router/: Cargo.toml
integration-test-lib/: Cargo.toml
locked-asset/: Cargo.toml
pair-mock/: Cargo.toml
pair-mock/src/: pair.rs
pause-all/: Cargo.toml
price-discovery/: Cargo.toml  README.md
sc-dex-helper/: Cargo.toml
sc-locked-asset-factory/: Cargo.toml  README.md
(+1567 files in other folders)
