[workspace]
members = [
  "dex",
  "dex/farm",
  "dex/farm/meta",
  "dex/farm-staking",
  "dex/farm-staking/meta",
  "dex/farm-staking-proxy",
  "dex/farm-staking-proxy/meta",
  "dex/farm_with_lock",
  "dex/farm_with_lock/meta",
  "dex/pair",
  "dex/pair/meta",
  "dex/router",
  "dex/router/meta",
  "dex/farm_v1_2_mock",
  "dex/farm_v1_2_mock/meta",
  "dex/fuzz",

  "locked-asset/",
  "locked-asset/distribution",
  "locked-asset/distribution/meta",
  "locked-asset/proxy_dex",
  "locked-asset/proxy_dex/meta",
  "locked-asset/factory",
  "locked-asset/factory/meta",

  "price-discovery",
  "price-discovery/meta",
  "pair-mock",
  "pair-mock/meta",

  "integration-test-lib",
]

[patch.crates-io]
elrond-wasm-debug0 = { version = "0.28.0", git = "https://github.com/multiversx/mx-sdk-rs", package = "elrond-wasm-debug", branch = "reproducible/v0.28.0" }
elrond-wasm-debug1 = { version = "0.36.1", git = "https://github.com/multiversx/mx-sdk-rs", package = "elrond-wasm-debug", branch = "reproducible/v0.36.1" }

