[workspace]
resolver = "2"

members = [
  "dex",
  "dex/farm",
  "dex/farm/meta",
  "dex/farm-with-locked-rewards",
  "dex/farm-with-locked-rewards/meta",
  "dex/pair",
  "dex/pair/meta",
  "dex/router",
  "dex/router/meta",
  "dex/fuzz",
  "dex/governance",
  "dex/governance/meta",
  "dex/price-discovery",
  "dex/price-discovery/meta",
  "dex/proxy-deployer",
  "dex/proxy-deployer/meta",
  "dex/pair-mock",
  "dex/pair-mock/meta",

  "energy-integration/energy-factory-mock",
  "energy-integration/energy-factory-mock/meta",
  "energy-integration/energy-update",
  "energy-integration/energy-update/meta",
  "energy-integration/fees-collector",
  "energy-integration/fees-collector/meta",
  "energy-integration/governance-v2",
  "energy-integration/governance-v2/meta",

  "farm-staking/farm-staking",
  "farm-staking/farm-staking/meta",
  "farm-staking/farm-staking-proxy",
  "farm-staking/farm-staking-proxy/meta",

  "legacy-contracts/simple-lock-legacy",
  "legacy-contracts/simple-lock-legacy/meta",
  "legacy-contracts/farm-staking-proxy-v13",
  "legacy-contracts/farm-staking-proxy-v13/meta",
  "legacy-contracts/metabonding-staking-legacy",
  "legacy-contracts/metabonding-staking-legacy/meta",
  "legacy-contracts/farm-v12",
  "legacy-contracts/farm-v12/meta",
  "legacy-contracts/farm-v13",
  "legacy-contracts/farm-v13/meta",
  "legacy-contracts/farm-v13-locked-rewards",
  "legacy-contracts/farm-v13-locked-rewards/meta",
  "legacy-contracts/farm-v13-custom-rewards",
  "legacy-contracts/farm-v13-custom-rewards/meta",
  "legacy-contracts/proxy-dex-legacy",
  "legacy-contracts/proxy-dex-legacy/meta",
  "legacy-contracts/factory-legacy",
  "legacy-contracts/factory-legacy/meta",
  "legacy-contracts/price-discovery-v1",
  "legacy-contracts/price-discovery-v1/meta",
  "legacy-contracts/price-discovery-v2",
  "legacy-contracts/price-discovery-v2/meta",
  "legacy-contracts/locked-asset-distribution",
  "legacy-contracts/locked-asset-distribution/meta",

  "locked-asset/",
  "locked-asset/proxy_dex",
  "locked-asset/proxy_dex/meta",
  "locked-asset/lkmex-transfer",
  "locked-asset/lkmex-transfer/meta",
  "locked-asset/locked-token-wrapper",
  "locked-asset/locked-token-wrapper/meta",
  "locked-asset/simple-lock",
  "locked-asset/simple-lock/meta",
  "locked-asset/energy-factory",
  "locked-asset/energy-factory/meta",
  "locked-asset/token-unstake",
  "locked-asset/token-unstake/meta",

  "pause-all",
  "pause-all/meta",
]
