[package]
name = "dex-tests"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies.elrond-wasm]
version = "0.27.3"

[dev-dependencies.elrond-wasm-debug]
version = "0.27.3"

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.config]
path = "../common/modules/farm/config"

[dev-dependencies.rewards]
path = "../common/modules/farm/rewards"

[dev-dependencies.migration_from_v1_2]
path = "../common/modules/farm/migration_from_v1_2"

[dev-dependencies.common_structs]
path = "../common/common_structs"

[dev-dependencies.farm]
path = "farm"

[dev-dependencies.farm-staking]
path = "farm-staking"

[dev-dependencies.farm-staking-proxy]
path = "farm-staking-proxy"

[dev-dependencies.farm_with_lock]
path = "farm_with_lock"

[dev-dependencies.factory]
path = "../locked-asset/factory"

[dev-dependencies.pair]
path = "pair"

[dev-dependencies.router]
path = "router"

[dev-dependencies.governance]
path = "governance"

