[package]
name = "dex-tests"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies.elrond-wasm]
version = "0.34.0"

[dev-dependencies.elrond-wasm-debug]
version = "0.34.0"

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.config]
path = "../common/modules/farm/config"

[dev-dependencies.farm_token]
path = "../common/modules/farm/farm_token"

[dev-dependencies.rewards]
path = "../common/modules/farm/rewards"

[dev-dependencies.custom_token_rewards]
path = "../common/modules/farm/custom_token_rewards"

[dev-dependencies.migration_from_v1_2]
path = "../common/modules/farm/migration_from_v1_2"

[dev-dependencies.locking_module]
path = "../common/modules/locking_module"

[dev-dependencies.pausable]
path = "../common/modules/pausable"

[dev-dependencies.common_structs]
path = "../common/common_structs"

[dev-dependencies.farm]
path = "farm"

[dev-dependencies.farm-staking]
path = "../farm-staking/farm-staking"

[dev-dependencies.farm-staking-proxy]
path = "../farm-staking/farm-staking-proxy"

[dev-dependencies.farm_with_lock]
path = "farm_with_lock"

[dev-dependencies.factory]
path = "../locked-asset/factory"

[dev-dependencies.simple-lock]
path = "../locked-asset/simple-lock"

[dev-dependencies.pair]
path = "pair"

[dev-dependencies.router]
path = "router"

[dev-dependencies.governance]
path = "governance"

[dev-dependencies.fees-collector]
path = "../energy-integration/fees-collector"
