[package]
name = "elrond_dex_farm"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[features]
wasm-output-mode = ["elrond-wasm-node"]

[dependencies.elrond-wasm]
version = "0.15"
path = "../../elrond-wasm-rs/elrond-wasm"

[dependencies.elrond-wasm-derive]
version = "0.15"
path = "../../elrond-wasm-rs/elrond-wasm-derive"

[dependencies.elrond-wasm-node]
version = "0.15"
optional = true
path = "../../elrond-wasm-rs/elrond-wasm-node"

[dev-dependencies.elrond-wasm-debug]
version = "0.15"
path = "../../elrond-wasm-rs/elrond-wasm-debug"

[dependencies.elrond_dex_pair]
path = "../elrond_dex_pair"
