[package]
name = "elrond_dex_pair"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[features]
wasm-output-mode = [ "elrond-wasm-node",]

[dependencies.elrond-wasm]
path = "../../elrond-wasm-rs/elrond-wasm"

[dependencies.elrond-wasm-derive]
path = "../../elrond-wasm-rs/elrond-wasm-derive"

[dependencies.elrond-wasm-node]
optional = true
path = "../../elrond-wasm-rs/elrond-wasm-node"

[dev-dependencies.elrond-wasm-debug]
path = "../../elrond-wasm-rs/elrond-wasm-debug"
