[package]
name = "elrond_dex_router"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[features]
wasm-output-mode = ["elrond-wasm-node"]

[dependencies.elrond-wasm]
version = "0.14"
path = "../../elrond-wasm-rs/elrond-wasm"

[dependencies.elrond-wasm-derive]
version = "0.14"
path = "../../elrond-wasm-rs/elrond-wasm-derive"

[dependencies.elrond-wasm-node]
version = "0.14"
optional = true
path = "../../elrond-wasm-rs/elrond-wasm-node"

[dev-dependencies.elrond-wasm-debug]
version = "0.14"
path = "../../elrond-wasm-rs/elrond-wasm-debug"
