[package]
name = "integration-test-lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4.2"

[dependencies.elrond-wasm]
version = "0.34.0"

[dependencies.elrond-wasm-debug]
version = "0.34.0"

[dependencies.proxy_dex]
path = "../locked-asset/proxy_dex"

[dependencies.farm]
path = "../dex/farm"

[dependencies.farm_v1_2_mock]
path = "../dex/farm_v1_2_mock"

[dependencies.common_structs]
path = "../common/common_structs"
