[package]
name = "distribution-tests"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies.elrond-wasm]
version = "0.25.0"

[dev-dependencies.elrond-wasm-debug]
version = "0.25.0"

[dependencies.farm]
path = "../dex/farm"

[dependencies.farm_with_lock]
path = "../dex/farm_with_lock"

[dependencies.pair]
path = "../dex/pair"

[dependencies.router]
path = "../dex/router"

[dependencies.distribution]
path = "distribution"

[dependencies.factory]
path = "factory"

[dependencies.proxy-dex]
path = "proxy-dex"
