[package]
name = "distribution-tests"
version = "0.0.0"
edition = "2018"
publish = false

[dependencies.elrond-wasm]
version = "0.36.0"
features = ["esdt-token-payment-legacy-decode",]

[dependencies.farm]
path = "../dex/farm"

[dependencies.pair]
path = "../dex/pair"

[dependencies.router]
path = "../dex/router"

[dependencies.distribution]
path = "distribution"

[dependencies.factory]
path = "factory"

[dependencies.simple-lock]
path = "simple-lock"

[dependencies.simple-lock-energy]
path = "simple-lock-energy"

[dependencies.fees-collector]
path = "../energy-integration/fees-collector"

[dependencies.common_structs]
path = "../common/common_structs"

[dependencies.proxy_dex]
path = "proxy_dex"

[dependencies.lkmex-transfer]
path = "lkmex-transfer"

[dev-dependencies.elrond-wasm-modules]
version = "0.36.0"

[dev-dependencies.elrond-wasm-debug]
version = "0.36.0"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"
