[package]
name = "pair_mock"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/pair.rs"

[dependencies.elrond-wasm]
version = "0.25.0"

[dev-dependencies.elrond-wasm-debug]
version = "0.25.0"

[dependencies.itertools]
version = "0.10.1"
default-features = false
