[package]
name = "pair-mock"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/pair.rs"

[dependencies.elrond-wasm]
version = "0.27.1"

[dev-dependencies.elrond-wasm-debug]
version = "0.27.1"

[dependencies.itertools]
version = "0.10.1"
default-features = false
