[package]
name = "price-discovery"
version = "0.0.0"
authors = [ "Dorin Iancu <dorin.iancu@elrond.com>" ]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.elrond-wasm]
version = "=0.25.0"

[dependencies]
hex-literal = "0.3.1"

[dependencies.pair]
path = "../dex/pair"

[dependencies.token_merge]
path = "../common/modules/token_merge"

[dev-dependencies.elrond-wasm-debug]
version = "=0.25.0"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"

[dev-dependencies.pair-mock]
path = "../pair-mock"
