[package]
name = "sc-dex-helper"
version = "0.0.0"
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[features]
wasm-output-mode = [ "elrond-wasm-node",]

[dependencies.elrond-wasm]
version = "0.17"

[dependencies.elrond-wasm-derive]
version = "0.17"

[dependencies.elrond-wasm-node]
version = "0.17"
optional = true

[dev-dependencies.elrond-wasm-debug]
version = "0.17"

[dependencies.common_structs]
path = "../common/common_structs"

[dependencies.elrond_dex_pair]
path = "../dex/elrond_dex_pair"
