[package]
name = "sc-locked-asset-factory"
publish = false
version = "0.0.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[features]
wasm-output-mode = [
  "elrond-wasm-node",
  "asset/wasm-output-mode",
]

[dependencies.distrib-common]
path = "../distribution/distrib-common"

[dependencies.asset]
path = "../distribution/modules/asset"

[dependencies.dex-common]
path = "../dex/dex-common"

[dependencies.elrond-wasm]
version = "0.17"

[dependencies.elrond-wasm-derive]
version = "0.17"

[dependencies.elrond-wasm-node]
optional = true
version = "0.17"

[dev-dependencies.elrond-wasm-debug]
version = "0.17"
