[package]
name = "sc-locked-asset-factory"
publish = false
version = "0.0.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[features]
wasm-output-mode = [
  "elrond-wasm-node",
  "token_supply/wasm-output-mode",
]

[dependencies.common_structs]
path = "../common/common_structs"

[dependencies.token_supply]
path = "../common/modules/token_supply"

[dependencies.elrond-wasm]
version = "0.17"

[dependencies.elrond-wasm-derive]
version = "0.17"

[dependencies.elrond-wasm-node]
optional = true
version = "0.17"

[dev-dependencies.elrond-wasm-debug]
version = "0.17"
