[package]
name = "dex-common"
version = "0.0.0"
authors = [ "catalin-neagu <catalin.neagu@elrond.com>",]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies.elrond-wasm]
version = "0.15"
path = "../../../elrond-wasm-rs/elrond-wasm"

[dependencies.elrond-wasm-derive]
version = "0.15"
path = "../../../elrond-wasm-rs/elrond-wasm-derive"

