[package]
name = "elrond_dex_farm"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[features]
wasm-output-mode = [
  "elrond-wasm-node",
  "token_supply/wasm-output-mode",
  "token_send/wasm-output-mode",
  "nft_deposit/wasm-output-mode",
]

[dependencies.token_supply]
path = "../../common/modules/token_supply"

[dependencies.token_send]
path = "../../common/modules/token_send"

[dependencies.nft_deposit]
path = "../../common/modules/nft_deposit"

[dependencies.elrond-wasm]
version = "0.17"

[dependencies.elrond-wasm-derive]
version = "0.17"

[dependencies.elrond-wasm-node]
version = "0.17"
optional = true

[dev-dependencies.elrond-wasm-debug]
version = "0.17"

[dependencies.sc-locked-asset-factory]
path = "../../sc-locked-asset-factory"

[dependencies.common_structs]
path = "../../common/common_structs"

