[package]
name = "elrond_dex_pair"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[features]
wasm-output-mode = [
  "elrond-wasm-node",
  "token_supply/wasm-output-mode",
]

[dependencies.token_supply]
path = "../../modules/token_supply"

[dependencies.elrond-wasm]
version = "0.17"

[dependencies.elrond-wasm-derive]
version = "0.17"

[dependencies.elrond-wasm-node]
version = "0.17"
optional = true

[dev-dependencies.elrond-wasm-debug]
version = "0.17"

[dependencies.dex-common]
path = "../dex-common"
