[package]
name = "elrond_dex_router"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[features]
wasm-output-mode = [
  "elrond-wasm-node",
  "token_send/wasm-output-mode",
]

[dependencies.token_send]
path = "../../common/modules/token_send"

[dependencies.elrond-wasm]
version = "0.18"
features = ["derive"]

[dependencies.elrond-wasm-derive]
version = "0.18"

[dependencies.elrond-wasm-node]
version = "0.18"
optional = true

[dev-dependencies.elrond-wasm-debug]
version = "0.18"

[dependencies.elrond_dex_pair]
path = "../elrond_dex_pair"

[dependencies.common_structs]
path = "../../common/common_structs"
