[package]
name = "farm-staking-proxy"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.elrond-wasm]
version = "0.25.0"

[dev-dependencies.elrond-wasm-debug]
version = "0.25.0"

[dependencies]
hex-literal = "0.3.1"

[dependencies.farm-staking]
path = "../farm-staking"

[dependencies.token_merge]
path = "../../common/modules/token_merge"

[dependencies.common_structs]
path = "../../common/common_structs"
