[package]
name = "farm-staking-proxy"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.elrond-wasm]
version = "0.27.2"

[dev-dependencies.elrond-wasm-debug]
version = "0.27.2"

[dependencies]
hex-literal = "0.3.1"

[dependencies.farm]
path = "../farm"

[dependencies.farm-staking]
path = "../farm-staking"

[dependencies.pair]
path = "../pair"

[dependencies.token_merge]
path = "../../common/modules/token_merge"

[dependencies.common_structs]
path = "../../common/common_structs"
