[package]
name = "farm-staking-proxy"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.elrond-wasm]
version = "=0.36.1"
features = [ "esdt-token-payment-legacy-decode" ]

[dependencies]
hex-literal = "0.3.1"

[dependencies.token_merge]
path = "../../common/modules/token_merge"

[dependencies.common_structs]
path = "../../common/common_structs"

[dev-dependencies.elrond-wasm-debug]
version = "=0.36.1"

[dev-dependencies]
num-bigint = "0.4.2"
