[package]
name = "farm-with-locked-rewards"
version = "0.0.0"
authors = ["MultiversX <contact@multiversx.com>"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"
[dependencies.farm_base_impl]
path = "../../common/modules/farm/farm_base_impl"

[dependencies.config]
path = "../../common/modules/farm/config"

[dependencies.farm_token]
path = "../../common/modules/farm/farm_token"

[dependencies.rewards]
path = "../../common/modules/farm/rewards"

[dependencies.events]
path = "../../common/modules/farm/events"

[dependencies.contexts]
path = "../../common/modules/farm/contexts"

[dependencies.token_send]
path = "../../common/modules/token_send"

[dependencies.locking_module]
path = "../../common/modules/locking_module"

[dependencies.pausable]
path = "../../common/modules/pausable"

[dependencies.utils]
path = "../../common/modules/utils"

[dependencies.permissions_module]
path = "../../common/modules/permissions_module"

[dependencies.sc_whitelist_module]
path = "../../common/modules/sc_whitelist_module"

[dependencies.mergeable]
path = "../../common/traits/mergeable"

[dependencies.fixed-supply-token]
path = "../../common/traits/fixed-supply-token"

[dependencies.farm]
path = "../farm"

[dependencies.common_structs]
path = "../../common/common_structs"

[dependencies.common_errors]
path = "../../common/common_errors"

[dependencies.farm-boosted-yields]
path = "../../energy-integration/farm-boosted-yields"

[dependencies.week-timekeeping]
path = "../../energy-integration/common-modules/week-timekeeping"

[dependencies.weekly-rewards-splitting]
path = "../../energy-integration/common-modules/weekly-rewards-splitting"

[dependencies.energy-factory]
path = "../../locked-asset/energy-factory"

[dependencies.energy-query]
path = "../../energy-integration/common-modules/energy-query"

[dependencies.multiversx-sc]
version = "=0.43.2"
features = ["esdt-token-payment-legacy-decode"]

[dependencies.multiversx-sc-modules]
version = "=0.43.2"

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.43.2"

[dev-dependencies.simple-lock]
path = "../../locked-asset/simple-lock"
