[package]
name = "farm"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.farm_base_impl]
path = "../../common/modules/farm/farm_base_impl"

[dependencies.config]
path = "../../common/modules/farm/config"

[dependencies.farm_token]
path = "../../common/modules/farm/farm_token"

[dependencies.rewards]
path = "../../common/modules/farm/rewards"

[dependencies.events]
path = "../../common/modules/farm/events"

[dependencies.contexts]
path = "../../common/modules/farm/contexts"

[dependencies.token_send]
path = "../../common/modules/token_send"

[dependencies.utils]
path = "../../common/modules/utils"

[dependencies.pausable]
path = "../../common/modules/pausable"

[dependencies.permissions_module]
path = "../../common/modules/permissions_module"

[dependencies.sc_whitelist_module]
path = "../../common/modules/sc_whitelist_module"

[dependencies.pair]
path = "../pair"

[dependencies.common_structs]
path = "../../common/common_structs"

[dependencies.common_errors]
path = "../../common/common_errors"

[dependencies.mergeable]
path = "../../common/traits/mergeable"

[dependencies.fixed-supply-token]
path = "../../common/traits/fixed-supply-token"

[dependencies.farm-boosted-yields]
path = "../../energy-integration/farm-boosted-yields"

[dependencies.week-timekeeping]
path = "../../energy-integration/common-modules/week-timekeeping"

[dependencies.weekly-rewards-splitting]
path = "../../energy-integration/common-modules/weekly-rewards-splitting"

[dependencies.energy-query]
path = "../../energy-integration/common-modules/energy-query"

[dependencies.elrond-wasm]
version = "0.36.0"
features = ["esdt-token-payment-legacy-decode",]

[dependencies.elrond-wasm-modules]
version = "0.36.0"

[dev-dependencies.elrond-wasm-debug]
version = "0.36.0"

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.energy-factory-mock]
path = "../../energy-integration/energy-factory-mock"
