[package]
name = "farm_with_lock"
version = "0.0.0"
authors = [ "you",]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.config]
path = "../../common/modules/config"

[dependencies.events]
path = "../../common/modules/events"

[dependencies.farm_token]
path = "../../common/modules/farm_token"

[dependencies.rewards]
path = "../../common/modules/rewards"

[dependencies.token_send]
path = "../../common/modules/token_send"

[dependencies.token_merge]
path = "../../common/modules/token_merge"

[dependencies.factory]
path = "../../locked-asset/factory"

[dependencies.pair]
path = "../pair"

[dependencies.common_structs]
path = "../../common/common_structs"

[dependencies.elrond-wasm]
version = "0.24.0"
features = ["cb_closure_managed_deser"]

[dev-dependencies.elrond-wasm-debug]
version = "0.24.0"
